@@ -1,94 +1,0 @@
-#
-# Spec file for oracleasm
-#
-
-# Macros
-# This one is hardcoded because, well, it belongs there
-%define _prefix /usr
-# Because RPM is dumb
-%define _unpackaged_files_terminate_build 0
-
-
-# This must be changed to the minimum ABI compat kernel version expected
-%define kver 2.4.19-4GB-SMP
-%define sver 304
-
-# The minimum -support package required for the kernel bits.
-%define support_ver     0.10.0
-
-Summary: The Oracle Automatic Storage Management library driver.
-Name: oracleasm-%{kver}-%{sver}
-Version: @DIST_VERSION@
-Release: @RPM_VERSION@
-Copyright: GPL
-Group: System Environment/Kernel
-Source: oracleasm-@DIST_VERSION@.tar.gz
-URL: http://oss.oracle.com/
-Distribution: Oracle
-Vendor: Oracle Corporation
-Packager: Joel Becker <joel.becker@oracle.com>
-Provides: oracleasm = %{version}
-AutoReqProv: no
-Requires: k_psmp = 2.4.19-%{sver}
-Requires: oracleasm-support >= %{support_ver}
-# BuildRequires: kernel-source >= %{kver}  -- silly UL nodeps
-
-
-BuildRoot: %{_tmppath}/oracleasm-%{PACKAGE_VERSION}-%{PACKAGE_RELEASE}-root
-
-
-%description
-Kernel driver for the Oracle Automatic Storage Management library.
-This package is compiled for uniprocessor kernels.
-
-
-%prep
-%setup -n oracleasm-%{version}
-
-
-%build
-# Hack to find a good source tree
-KVER="%{kver}-%{sver}"
-echo "Finding kernel $KVER... "
-KPATH="/usr/src/linux-${KVER}"
-if test -d "$KPATH"
-then
-    echo "Found $KPATH"
-else
-    echo "Unable to find kernel $KVER" >&2
-    exit 1
-fi
-
-%configure --sbindir=/usr/sbin --with-kernel="${KPATH}"
-cd kernel
-
-make
-make DESTDIR="$RPM_BUILD_ROOT" MODULEDIR="/lib/modules/%{kver}/kernel/drivers/addon/oracleasm" install 
-
-
-
-%install
-
-
-
-%clean
-rm -rf "$RPM_BUILD_ROOT"
-
-
-
-%files
-%defattr(-,root,root)
-/lib/modules/%{kver}/kernel/drivers/addon/oracleasm
-
-%post
-depmod -a
-
-
-
-%changelog
-* Tue Jan 13 2004 Joel Becker <joel.becker@oracle.com>
-- Kernel-only specfile.
-
-* Tue Nov 18 2003 Joel Becker <joel.becker@oracle.com>
-- Initial RPM
-
